--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@material-ui/lab": "^4.0.0-alpha.55",
     "@material-ui/styles": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -39,5 +38,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@testing-library/react": "^10.2.1",
+    "babel-jest": "24.9.0",
+    "jest": "24.9.0",
+    "react-test-renderer": "^16.13.1"
   }
 }
